--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -45,6 +45,7 @@
                     <li><a href="{{ url_for('agregar_venta') }}">Nueva Venta</a></li>
                     <li><a href="{{ url_for('ver_ingresos') }}">Ingresos</a></li>
                     <li><a href="{{ url_for('ver_renovaciones') }}">Renovaciones</a></li>
+                    <li><a href="{{ url_for('estado') }}">Estado de Cuentas</a></li>
                 </ul>
             </div>
             <div class="col-md-6">
