--- a/app/templates/ver_ingresos.html
+++ b/app/templates/ver_ingresos.html
@@ -68,9 +68,9 @@
                     <p><strong>{{ referido[0] }}:</strong> {{ referido[1] }} L</p>
                 {% endfor %}
                 
-                 <h2>Total Ganado:</h2>
+                 <h2>Ganancias:</h2>
                 <p><strong>Mensual:</strong> {{ ingresos_mensuales }} L</p>
-                <p><strong>Anual:</strong> {{ ingresos_anuales }} L</p>
+                <p><strong>Total Ganado:</strong> {{ ingresos_anuales }} L</p>
             </div>
         </div>
         <br>
