--- a/app/templates/ver_ingresos_usuario.html
+++ b/app/templates/ver_ingresos_usuario.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h2>Mis Ingresos</h2>
             <h5 class="card-title">Mensuales: L {{ ingresos_mensuales }}</h5>
-            <h5 class="card-title">Anuales: L {{ ingresos_anuales }}</h5>
+            <h5 class="card-title">Total Ganado: L {{ ingresos_anuales }}</h5>
         </div>
     </div>
 </div>
