--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -247,7 +247,7 @@
                     <li>
                         <a href="#">Menu</a>
                         <ul class="submenu">
-                            <li><a href="/login">Iniciar Sesion</a></li>
+                            <li><a href="/streamplus">Iniciar Sesion</a></li>
                             <li><a href="/codigos">Codigos de acceso</a></li>
                             <li><a href="/">Cuentas</a></li>
                             <li><a href="/combos">Combos</a></li>
